# zed

./: Cargo.toml
assets/keymaps/: default-macos.json
assets/settings/: default.json
crates/reader/: Cargo.toml
crates/reader/src/: reader.rs
crates/workspace/src/: invalid_item_view.rs  workspace.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: app_menus.rs
crates/zed_actions/src/: lib.rs
