[package]
name = "reader"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/reader.rs"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
serde_json.workspace = true
ui.workspace = true
workspace.workspace = true
